fix: revise button spacing

--- a/wp-content/themes/sumzim2022/src/scss/main/components/_block__toggle.scss
+++ b/wp-content/themes/sumzim2022/src/scss/main/components/_block__toggle.scss
@@ -146,6 +146,11 @@
                             border-bottom: none;
                             list-style: inherit;
                         }
+
+                        a.button {
+                            margin-top: 32px;
+                            display: inline-block;
+                        }
                     }
                 }
             }
